# eds_bevy_common

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
art/: empty.blend
assets/fonts/: Recursive_Fonts-license.txt
assets/maps/: empty.glb  sample_level.glb
assets/shaders/: normal_detail.wgsl
assets/skyboxes/: farm_field_puresky_4k.txt
examples/: game_menu.rs  sound_chain.rs  sound_field.rs
src/: actions_common.rs  actions_common_bei.rs  actions_common_lim.rs  app.rs  areas.rs  assets.rs  audio.rs  base_dir.rs  client_synth.rs  collision_hooks.rs  conditions.rs  crosshair.rs  deathbox.rs  debug.rs  debug_egui.rs  despawn_on_reset.rs  detail_normal.rs  effects.rs  fps.rs  grabbing.rs  gui.rs  highlighting.rs  layers.rs  levels.rs  lib.rs  lifecycle.rs  lights.rs  markers.rs  menu_audio.rs  menus_common.rs  model_utils.rs  parallax_depth.rs  player_camera.rs  player_client.rs  player_controller.rs  player_input.rs  player_move_look.rs  player_spawning.rs  product.rs  skybox.rs  (+9 more)
src/midi_synth/: mod.rs  xCargo.toml
src/midi_synth/asset/: mod.rs  sound_font.rs
src/midi_synth/synth/: firewheel_nodes.rs  midi.rs  mod.rs  plugin.rs
