[package]
name = "eds_bevy_common"
version = "0.1.0"
edition = "2024"
authors = ["Ed Swartz (github.com/eswartz)"]
license = "MIT OR Apache 2"
categories = ["game"]


#########
# If you are using `webp` in glTF files via `bevy/webp`,
# then please copy this section into your project's `.cargo/config.toml`'s
# section so all clients will see the same patches.
# (Without such edits, your project will have a separate copy of bevy
# and you'll get a lot of errors.)
#########
[patch.crates-io]
# bevy = { path = "../bevy-fork" }

# Support webp.
# See above to fix error: feature `reqs` includes `gltf/EXT_texture_webp`, but `gltf` is not a dependency
gltf = { git = "https://github.com/gltf-rs/gltf.git", branch = "main" }

#########

[features]
default = ["input_bei", "highlighting", "grabbing", "firewheel"]

trenchbroom = ["bevy_trenchbroom"]
input_lim = ["dep:leafwing-input-manager"]
input_bei = ["dep:bevy_enhanced_input"]
midi_synth = ["dep:rustysynth", "dep:xsynth-core", "dep:crossbeam-channel"]
highlighting = ["dep:bevy_mod_outline"]
grabbing = ["dep:bevy_mod_outline"]
# input_lim = []
# input_bei = []

# kira = ["dep:kira", "dep:bevy_kira_audio"]
kira = []
firewheel = ["dep:bevy_seedling", "dep:firewheel"]

webgpu = ["bevy/webgpu"]

dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
    # "dep:bevy-inspector-egui",
    "avian3d/diagnostic_ui",
    # "bevy_rerecast/debug_plugin",
    # "bevy_rerecast/editor_integration",
]
dev_native = [
    "bevy/bevy_remote",
    "bevy/basis-universal",

    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
    # "bevy_rerecast/editor_integration",

    "bevy/webgpu",
]
web = [
    "bevy/webgpu",
    "bevy_seedling/web_audio",
]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    # 3d without sound.
    "default_app",
    "default_platform",
    "3d_api",
    "3d_bevy_render",
    "scene",
    # "audio",
    "picking",

    "ui",

    # And these optional:
    # "dev",
    "bevy_dev_tools",
    # "file_watcher",
    # "async-io", # no-go for web
    # "bevy_remote", # not gonna add it from a lib, but go for it (most is Reflect'able)
    "jpeg",
    "webp",
    "exr",
    "track_location",
    "asset_processor",
    "experimental_pbr_pcss",

    "x11",
    "wayland",
    # "webgpu", # noooo not yet

    # "basis-universal",
    # "trace_tracy",
] }

log = { version = "0.4", features = [
    "max_level_debug",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
] }
# avian3d = { version = "0.6.0", default-features = false, features = [
avian3d = { git = "https://github.com/Jondolf/avian.git", branch = "main", default-features = false, features = [
	"3d",
	"collider-from-mesh",
    "f32", "parry-f32",
    #  "f64", "parry-f64",
    "bevy_scene",
    "bevy_picking",
    "diagnostic_ui",
    "debug-plugin",
    # "validate",  # has crash
    "xpbd_joints", # optional
    "serialize",
] }
bevy_egui = { version = "0.39", features = ["render", "serde"] }
bevy-inspector-egui = "0.36"
egui = { version = "0.33", features = ["bytemuck"] }

firewheel = { git = "https://github.com/BillyDM/Firewheel", rev = "f1e8219", optional = true }
# firewheel = { git = "https://github.com/BillyDM/Firewheel", rev = "f1e8219", optional = true, default-features = false, features = [
#     "bevy",
#   "spatial_basic_node",
#   "scheduled_events",
#   "musical_transport",
#   "glam-30",
#   "sampler_node",
#   "std",
#   "tracing",

#     # "resample_inputs",
#   "fast_filter_nodes",
#  ] }

# bevy_seedling = { version = "0.8", default-features = false, optional = true, features = [
bevy_seedling = { git = "https://github.com/CorvusPrudens/bevy_seedling.git", rev = "bfd2f33ddd81be928a796febf4ffff599999495a", optional = true, default-features = false, features = [
    "wav", "ogg", "rand", "reflect", "diagnostics",
    "hrtf",
    "cpal",
    "web_audio",

    "loudness",
    # "dev",
    # 0.10
    # "stream",
    # "scheduled_events",

    # 0.11
    "effects",
] }

rustc-hash = "2.1.1"

strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
strum_macros = "0.27.2"

leafwing-input-manager = { version = "0.20", optional = true }
bevy_enhanced_input = { version = "0.24", features = ["reflect", "state", "serialize"], optional = true }

bevy_asset_loader = { version = "0.25.0", features = [
    "2d",
    "3d",
    # "progress_tracking",
] }

bevy_trenchbroom = { optional = true, version = "0.12", default-features = false, features = [ "bsp", "client", "physics-integration" ] }
bevy_trenchbroom_avian = { optional = true, version = "0.12", default-features = false }

bevy_skein = { optional = true, version = "0.5.0" }

bevy_mod_outline = { version = "0.12", optional = true }

serde = { version = "1.0", features = ["alloc", "derive", "serde_derive"] }
rand = { version = "0.10.0" }

getrandom = { version = "0.4.1", features = ["wasm_js"]}
image = { version = "0.25", default-features = false }
wgpu = "27.0.1"
bytemuck = "1.25.0"
anyhow = "1.0.101"
bevy_tweening = "0.15.0"

sysinfo = { version = "0.37" }
thiserror = { version = "2.0.12" }

rustysynth = { version = "1.3", optional = true }
xsynth-core = { version = "0.4", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
fuzzy-matcher = "0.3.7"

console_log = "1"

wasm_thread = "0.3"
wasm-bindgen = { version = "0.2.120" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
firewheel = { git = "https://github.com/BillyDM/Firewheel", rev = "f1e8219", default-features = false, features = [
  "wasm-bindgen",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 1

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
# codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# opt-level = 1

[[example]]
name = "game_menu"
required-features = ["input_bei", "bevy_skein"]

[[example]]
name = "sound_chain"
required-features = ["input_bei", "bevy_skein", "midi_synth"]
